--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.15.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "native-base": "^2.15.2",
