--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@react-native-picker/picker": "^1.15.0",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.1.2",
     "expo-status-bar": "~1.0.3",
     "native-base": "^2.15.2",
     "react": "16.13.1",
@@ -27,7 +28,9 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
