--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,16 +5,17 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "mocha **/tests/*.test.js"
   },
   "dependencies": {
     "ganache-cli": "^6.12.2",
     "solc": "^0.8.7",
-    "web3": "^1.3.5"
+    "web3": "^1.5.2"
   },
   "devDependencies": {
     "mocha": "^8.3.2",
-    "truffle-hdwallet-provider": "^0.0.3"
+    "truffle-hdwallet-provider": "^1.0.17"
   },
   "private": true
 }
