--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,19 +30,13 @@
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.1",
-    "ganache-cli": "^6.12.2",
-    "solc": "^0.4.17",
-    "web3": "^1.3.5"
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "node-sass": "^5.0.0",
     "sass": "^1.32.11",
-    "sass-loader": "^11.0.1",
-    "webpack": "^5.35.1",
-    "mocha": "^8.3.2",
-    "truffle-hdwallet-provider": "^0.0.3"
+    "sass-loader": "^11.0.1"
   },
   "private": true
 }
