--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,9 +22,11 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~2.15.2",
+    "react-native-select-dropdown": "^1.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
