--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "rn-first-app",
-    "slug": "rn-first-app",
+    "name": "search-function",
+    "slug": "search-function",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
