--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,17 +14,21 @@
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.1.2",
+    "expo-file-system": "~9.3.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
-    "native-base": "^2.15.2",
+    "native-base": "^2.8.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~2.15.2",
     "react-native-select-dropdown": "^1.1.0",
@@ -34,7 +38,9 @@
     "react-navigation-header-buttons": "^6.3.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.1"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "redux": "^4.1.1",
+    "expo-permissions": "~10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
