--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,11 +11,12 @@
     "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.15.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-file-system": "~9.3.0",
     "expo-image-picker": "~9.2.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "native-base": "^2.8.2",
     "react": "16.13.1",
@@ -39,8 +40,7 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux": "^4.1.1",
-    "expo-permissions": "~10.0.0"
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
