--- a/.gitignore
+++ b/.gitignore
@@ -754,5 +754,6 @@ hs_err_pid*
 ### AndroidStudio Patch ###
 
 !/gradle/wrapper/gradle-wrapper.jar
+.expo/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,androidstudio,pycharm,python,vscode,reactnative
