--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -2,7 +2,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "mocha **/tests/*.test.js"
+    "test": "mocha --timeout 60000"
   },
   "dependencies": {
     "@google-cloud/firestore": "^4.15.1",
@@ -18,9 +18,9 @@
   },
   "devDependencies": {
     "axios": "^0.21.4",
-    "mocha": "^8.3.2",
-    "truffle-hdwallet-provider": "^1.0.17",
-    "nodemon": "^1.18.5"
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.14",
+    "truffle-hdwallet-provider": "^1.0.17"
   },
   "private": true
 }
