file upload backend integration, partially completed

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -23,7 +23,9 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.3.2",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-image-base64": "^0.1.4",
     "react-native-ionicons": "^4.6.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
